@@ -31,10 +31,10 @@ sub test1 {
 
     my $arch = urpm::cfg::get_arch();
     test_urpmi("b c", sprintf(<<'EOF', $arch, $arch));
-      1/3: c
-      2/3: b
+      1/2: c
+      2/2: b
 removing package a-1-1.%s
-      3/3: removing a-1-1.%s
+      1/1: removing a-1-1.%s
 EOF
     check_installed_and_remove('b', 'c');
 }
