@@ -1,3 +1,5 @@
+- keep a separate counter for erasures
+
 Version 7.17 - 5 February 2013, by Thierry Vignaud
 
 - fix counting for erasures
